inf/source/core/lex.cpp
/* Generated by re2c 4.1 on Sat Oct 11 15:42:14 2025 */
#line 1 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
// Copyright (C) 2024 Cade Weinberg
//
// This file is part of inf.
//
// inf is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// inf is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with inf.  If not, see <http://www.gnu.org/licenses/>.

#include <charconv>

#include <boost/assert.hpp>

#include "core/lex.hpp"
#include "env/context.hpp"

namespace inf {
inf::token lexer::lex() {
while (true) {
        location_.step();
        token                 = cursor;
        
#line 34 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
{
	char yych;
	yych = *cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case ' ': goto yy2;
		case '%': goto yy3;
		case '(': goto yy4;
		case ')': goto yy5;
		case '*': goto yy6;
		case '+': goto yy7;
		case '-': goto yy8;
		case '/': goto yy9;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy10;
		case ';': goto yy12;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy13;
		default:
			if (limit - cursor < 1) goto yy15;
			goto yy1;
	}
yy1:
	++cursor;
#line 46 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ return token::error(); }
#line 123 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy2:
	++cursor;
#line 49 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); continue; }
#line 128 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy3:
	++cursor;
#line 75 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::percent(); }
#line 133 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy4:
	++cursor;
#line 68 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::lparen(); }
#line 138 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy5:
	++cursor;
#line 69 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::rparen(); }
#line 143 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy6:
	++cursor;
#line 73 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::star(); }
#line 148 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy7:
	++cursor;
#line 71 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::plus(); }
#line 153 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy8:
	++cursor;
#line 72 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::minus(); }
#line 158 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy9:
	++cursor;
#line 74 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::fslash(); }
#line 163 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy10:
	++cursor;
	yych = *cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy10;
		default: goto yy11;
	}
yy11:
#line 51 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{
                up();
                int64_t integer = 0;
                auto [ptr, ec] = std::from_chars(token,
                                                 cursor,
                                                 integer);

                BOOST_ASSERT(ec == std::errc());
                return token::integer(integer);
            }
#line 192 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy12:
	++cursor;
#line 70 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ up(); return token::semicolon(); }
#line 197 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy13:
	++cursor;
	yych = *cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy13;
		default: goto yy14;
	}
yy14:
#line 62 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{
                up();
                auto sv = ctx->string_intern({token, cursor});
                return token::label(sv);
            }
#line 274 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
yy15:
#line 47 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"
	{ return token::end(); }
#line 278 "/home/cadence/Projects/inf/inf/source/core/lex.cpp"
}
#line 76 "/home/cadence/Projects/inf/inf/source/core/lex.re2c"

    }
}

}
